@@ -61,21 +61,21 @@ projects.
 	<td><a href="http://pear.php.net/package/DB">PEAR :: Package :: DB</a></td>
 	<td><a href="http://www.php.net/license/3_0.txt">PHP License 3.0</a></td>
 	<td>N.A.</td>
-	<td>The parseDSN() function from DB.php file.</td>	
+	<td>The parseDSN() function from DB.php file.</td>
 </tr>
 <tr>
 	<td><a href="../I18N/core/TCache_Lite.php">../I18N/core/TCache_Lite.php</a></td>
 	<td><a href="http://pear.php.net/package/Cache_Lite">PEAR :: Package :: Cache_Lite</a></td>
 	<td><a href="http://www.gnu.org/licenses/lgpl.html">LGPL</a></td>
 	<td>N.A.</td>
-	<td>Cache_Lite class was renamed as TCache_Lite for packaging purposes.</td>	
+	<td>Cache_Lite class was renamed as TCache_Lite for packaging purposes.</td>
 </tr>
 <tr>
 	<td><a href="../I18N/core/Gettext">../I18N/core/Gettext</a></td>
 	<td><a href="http://pear.php.net/package/File_Gettext">PEAR :: Package :: File_Gettext</a></td>
 	<td><a href="http://www.php.net/license/3_0.txt">PHP License 3.0</a></td>
 	<td>N.A.</td>
-	<td>File_Gettext, File::Gettext::MO, and File::Gettext::PO</td>	
+	<td>File_Gettext, File::Gettext::MO, and File::Gettext::PO</td>
 </tr>
 
 <tr>
@@ -83,7 +83,7 @@ projects.
 	<td><a href="http://pear.php.net/pepr/pepr-proposal-show.php?id=198">Service_JSON proposal</a></td>
 	<td><a href="http://www.opensource.org/licenses/bsd-license.php">BSD</a></td>
 	<td>N.A.</td>
-	<td>JSON encoder/decoder by Michal Migurski, Matt Knapp and Brett Stimmerman</td>	
+	<td>JSON encoder/decoder by Michal Migurski, Matt Knapp and Brett Stimmerman</td>
 </tr>
 
 <tr>
@@ -91,21 +91,21 @@ projects.
 	<td><a href="http://openrico.org/">Rico</a></td>
 	<td><a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License v2</a></td>
 	<td>N.A.</td>
-	<td>Rico Javascript Library (not yet utilized in Prado)</td>	
+	<td>Rico Javascript Library (not yet utilized in Prado)</td>
 </tr>
 <tr>
 	<td><a href="../Web/Javascripts/prototype/">../Web/Javascripts/prototype</a></td>
 	<td><a href="http://dev.rubyonrails.org/browser/spinoffs/prototype">Prototype javascript library</a></td>
 	<td><a href="../Web/Javascripts/prototype/LICENSE">The Prototype License (MIT based)</a></td>
 	<td>N.A.</td>
-	<td>Core of Prado javascript library.</td>	
+	<td>Core of Prado javascript library.</td>
 </tr>
 <tr>
 	<td><a href="../Web/Javascripts/extra/logger.js">../Web/Javascripts/extra/logger.js</a></td>
 	<td><a href="http://gleepglop.com/javascripts/logger/">http://gleepglop.com/javascripts/logger/</a> <a href="http://slayeroffice.com">http://slayeroffice.com</a></td>
 	<td>None</td>
 	<td>TJavascriptLogger</td>
-	<td>Javascript logger by Corey Johnson. Object Tree by S.G. Chipman.</td>	
+	<td>Javascript logger by Corey Johnson. Object Tree by S.G. Chipman.</td>
 </tr>
 
 <tr>
@@ -113,7 +113,7 @@ projects.
 	<td><a href="http://www.JSON.org">http://www.JSON.org</a></td>
 	<td><a href="http://www.json.org/license.html">MIT based</a></td>
 	<td>N.A.</td>
-	<td>Has "The Software shall be used for Good, not Evil." clause.</td>	
+	<td>Has "The Software shall be used for Good, not Evil." clause.</td>
 </tr>
 
 <tr>
@@ -122,7 +122,7 @@ projects.
 	<td><a href="../../demos/quickstart/protected/index/Zend/LICENSE.txt">BSD</a></td>
 	<td>Quickstart tutorial indexing and search is provided the Zend Lucene search implementation.</td>
 	<td>This product includes the Zend Framework, freely available at
-     http://www.zend.com</td>	
+     http://www.zend.com</td>
 </tr>
 
 <tr>
@@ -130,8 +130,17 @@ projects.
 	<td><a href="http://www.michelf.com/projects/php-markdown/">PHP Markdown</a></td>
 	<td><a href="Markdown/License.text">BSD</a></td>
 	<td>System.Web.UI.WebControls.TMarkdown</td>
-	<td>PHP5 class implementation of the PHP Markdown.</td>	
+	<td>PHP5 class implementation of the PHP Markdown.</td>
 </tr>
+
+<tr>
+	<td><a href="../Util">../Util</a></td>
+	<td><a href="http://phplens.com/phpeverywhere/adodb_date_library">ADOdb Date Time Library</a></td>
+	<td><a href="http://phplens.com/phpeverywhere/adodb_date_library">BSD</a></td>
+	<td>System.Util.TDateTimeStamp</td>
+	<td>TimeStamp support for dates outside the 1970-2038.</td>
+</tr>
+
 
 </table>
 </p>
